; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cook.c_mlt_compensate_output.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cook.c_mlt_compensate_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*, float*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, float*, i32*, float*, float*)* @mlt_compensate_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlt_compensate_output(%struct.TYPE_5__* %0, float* %1, i32* %2, float* %3, float* %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca float*, align 8
  %10 = alloca float*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store float* %1, float** %7, align 8
  store i32* %2, i32** %8, align 8
  store float* %3, float** %9, align 8
  store float* %4, float** %10, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %12 = load float*, float** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load float*, float** %9, align 8
  %15 = call i32 @imlt_gain(%struct.TYPE_5__* %11, float* %12, i32* %13, float* %14)
  %16 = load float*, float** %10, align 8
  %17 = icmp ne float* %16, null
  br i1 %17, label %18, label %25

18:                                               ; preds = %5
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32 (%struct.TYPE_5__*, float*)*, i32 (%struct.TYPE_5__*, float*)** %20, align 8
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %23 = load float*, float** %10, align 8
  %24 = call i32 %21(%struct.TYPE_5__* %22, float* %23)
  br label %25

25:                                               ; preds = %18, %5
  ret void
}

declare dso_local i32 @imlt_gain(%struct.TYPE_5__*, float*, i32*, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
